Fixed footer icons,alignment and hover effect.

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,15 @@
     padding: 0;
     margin: 0;
 }
+
+.social-icons a {
+    font-size: 28px; 
+    color: rgb(255, 255, 255);
+    transition: color 0.3s; 
+    align-items: center;
+    align-content: center;
+  }
+  
+  .social-icons a:hover {
+    color: rgb(0, 0, 0); 
+  }
